--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,9 @@
   --font-comm-regular: 'Commissioner-Regular', system-ui, 'sans-serif';
   --font-great-vibes: 'Great-Vibes', serif, system-ui;
 }
+body{
+  background-color: var(--clr-green-light-bg);
+}
 
 a{
   text-decoration: none;
@@ -63,7 +66,7 @@ header{
     & .logo-text{
       font-family: var(--font-great-vibes);
       color: var(--clr-blue);
-      font-size: 48px;
+      font-size: 54px;
       text-wrap: nowrap;
       user-select: none;
     }
@@ -121,17 +124,114 @@ header{
       background-color: var(--clr-green-light-bg);
       color: var(--clr-green-dark-ultra);
       border: none;
-      font-size: 44px;
+      font-size: 40px;
       font-family: var(--font-comm-bold);
       border-radius: 32px;
-      padding: 20px 40px;
+      padding: 16px 32px;
       cursor: pointer;
+    }
+    & .order-now:hover{
+      box-shadow: 0 0 10px 2px white;
     }
     & .text{
       color: var(--clr-green-light-bg);
-      font-size: 56px;
+      font-size: 40px;
     }
   }
 }
 
+.sect-cards{
+  height: 600px;
+  /* margin: 60px 0; */
+  
+  & .text{
+    font-size: 64px;
+    color: var(--clr-green-dark);
+    margin: 36px;
+  }
+
+  & .carousel{
+    display: flex;
+    gap: 40px;
+
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,0.1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0.1) 100%);
+
+    & .card{
+      width: 400px;
+      background-color: var(--clr-green-light-ultra);
+      border-radius: 40px;
+      margin: 0 auto;
+      overflow: hidden;
+  
+      & .image{
+        position: relative;
+        width: 400px;
+        height: 360px;
+        left: 50%;
+        transform: translate(-50%);
+      }
+      & .text-content{
+        display: flex;
+        flex-direction: column;
+        padding: 20px 30px;
+        gap: 16px;
+
+        & .words{
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+
+          & .main-text{
+            font-size: 32px;
+            color: var(--clr-green-dark-ultra)
+          }
+          & .secondary-text{
+            font-size: 16px;
+            color: var(--clr-green-dark)
+          }
+        }
+        & .numbers{
+          display: flex;
+          gap: 35px;
+
+          & .price{
+            & .current{
+              color: var(--clr-green-dark-ultra);
+              font-size: 40px;
+
+            }
+            & .previous{
+              color: var(--clr-green);
+              font-size: 32px;
+            }
+          }
+          & .order{
+            border: 4px solid var(--clr-green-dark-ultra);
+            border-radius: 8px;
+            color: var(--clr-green-dark-ultra);
+            background-color: rgba(255, 255, 255, 0);
+            font-family: var(--font-comm-bold);
+            padding: 4px 12px;
+            align-self: center;
+            cursor: pointer;
+            font-size: 20px;
+            transition: all 0.2s ease-out;
+
+            display: flex;
+            align-items: center;
+            gap: 8px;
+
+            & .icon{
+              font-size: 1.7em;
+            }
+          }
+          & .order:hover{
+            transform: translateY(-2px);
+          }
+        }
+      }
+    }
+  }
+}
 
