--- a/src/style.css
+++ b/src/style.css
@@ -142,7 +142,7 @@ header{
 
 .sect-cards{
   height: 600px;
-  /* margin: 60px 0; */
+  /* margin: 0 16px; */
   
   & .text{
     font-size: 64px;
@@ -150,26 +150,25 @@ header{
     margin: 36px;
   }
 
-  & .carousel{
+  & .offers{
     display: flex;
-    gap: 40px;
+    justify-content: space-evenly;
+    gap: 16px;
 
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,0.1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0.1) 100%);
 
     & .card{
-      width: 400px;
+      width: 380px;
       background-color: var(--clr-green-light-ultra);
       border-radius: 40px;
       margin: 0 auto;
       overflow: hidden;
   
       & .image{
-        position: relative;
-        width: 400px;
-        height: 360px;
-        left: 50%;
-        transform: translate(-50%);
+        background-size: cover;
+        background-position: center;
+        height: 240px;
       }
       & .text-content{
         display: flex;
@@ -193,7 +192,7 @@ header{
         }
         & .numbers{
           display: flex;
-          gap: 35px;
+          gap: calc(10vw - 88px);
 
           & .price{
             & .current{
