--- a/src/style.css
+++ b/src/style.css
@@ -220,6 +220,7 @@ header{
     & .text{
       color: var(--clr-green-light-bg);
       font-size: 40px;
+      margin: 0;
     }
   }
 }
@@ -240,6 +241,7 @@ header{
 
 .sect-contact{
   background-color: var(--clr-green-light);
+  color: var(--clr-green-dark-ultra);
 
   & .flex-wrapper{
     display: flex;
@@ -367,4 +369,32 @@ header{
     }
   }
 
+}
+
+footer{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & .text{
+    font-size: 24px;
+    color: var(--clr-green-dark-ultra)
+  }
+
+  & .contributors{
+    padding: 18px;
+    padding-bottom: 0;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 10px 20px;
+    font-size: 18px;
+    font-family: var(--font-comm-regular);
+    color: var(--clr-blue-dark);
+
+    & a{
+      color: var(--clr-blue-dark);
+      font-family: var(--font-comm-bold);
+    }
+  }
 }
